--- a/src/main/resources/ua/fastgroup/clientserversstorage/add-update-group-view.fxml
+++ b/src/main/resources/ua/fastgroup/clientserversstorage/add-update-group-view.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ua.fastgroup.clientserversstorage.controllers.AddUpdateProductController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ua.fastgroup.clientserversstorage.controllers.AddUpdateGroupController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" percentWidth="25.0" prefWidth="146.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="461.0" minWidth="10.0" percentWidth="75.0" prefWidth="454.0" />
@@ -27,12 +27,12 @@
       <Label fx:id="title" alignment="CENTER" text="Add group" textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" />
       <Label text="Group Name" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
       <Label text="Group Description" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-      <TextField fx:id="productName" text="group1" GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <TextField fx:id="groupName" text="group1" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <GridPane.margin>
             <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
          </GridPane.margin>
       </TextField>
-      <TextField fx:id="groupName" text="description" GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <TextField fx:id="description" text="description" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
          </GridPane.margin>
