--- a/src/main/resources/ua/fastgroup/clientserversstorage/main-view.fxml
+++ b/src/main/resources/ua/fastgroup/clientserversstorage/main-view.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -14,7 +16,39 @@
       </TableView>
    </center>
    <left>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label fx:id="labelName">
+               <VBox.margin>
+                  <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
+               </VBox.margin>
+            </Label>
+            <Label fx:id="labelPrice">
+               <VBox.margin>
+                  <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
+               </VBox.margin>
+            </Label>
+            <Label fx:id="labelAmount">
+               <VBox.margin>
+                  <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
+               </VBox.margin>
+            </Label>
+            <Label fx:id="labelGroup">
+               <VBox.margin>
+                  <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
+               </VBox.margin>
+            </Label>
+            <Label fx:id="labelManufacturer">
+               <VBox.margin>
+                  <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
+               </VBox.margin>
+            </Label>
+            <Label fx:id="labelDescription">
+               <VBox.margin>
+                  <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
+               </VBox.margin>
+            </Label>
+         </children></VBox>
    </left>
    <top>
       <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
