--- a/src/main/resources/ua/fastgroup/clientserversstorage/main-view.fxml
+++ b/src/main/resources/ua/fastgroup/clientserversstorage/main-view.fxml
@@ -1,56 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.TabPane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ua.fastgroup.clientserversstorage.controllers.MainController">
-   <center>
-      <TableView fx:id="productTable" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
-   </center>
-   <left>
-      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label fx:id="labelName">
-               <VBox.margin>
-                  <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
-               </VBox.margin>
-            </Label>
-            <Label fx:id="labelPrice">
-               <VBox.margin>
-                  <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
-               </VBox.margin>
-            </Label>
-            <Label fx:id="labelAmount">
-               <VBox.margin>
-                  <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
-               </VBox.margin>
-            </Label>
-            <Label fx:id="labelGroup">
-               <VBox.margin>
-                  <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
-               </VBox.margin>
-            </Label>
-            <Label fx:id="labelManufacturer">
-               <VBox.margin>
-                  <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
-               </VBox.margin>
-            </Label>
-            <Label fx:id="labelDescription">
-               <VBox.margin>
-                  <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
-               </VBox.margin>
-            </Label>
-         </children></VBox>
-   </left>
-   <top>
-      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-   </top>
-</BorderPane>
+
+<TabPane fx:id="pane" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ua.fastgroup.clientserversstorage.controllers.MainController" />
