--- a/src/main/resources/ua/fastgroup/clientserversstorage/products-view.fxml
+++ b/src/main/resources/ua/fastgroup/clientserversstorage/products-view.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -18,32 +20,42 @@
    <left>
       <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
          <children>
-            <Label fx:id="labelName">
+            <Button fx:id="buttonUpdate" mnemonicParsing="false" text="Update">
+               <VBox.margin>
+                  <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="buttonDelete" mnemonicParsing="false" onAction="#onDelete" text="Delete">
+               <VBox.margin>
+                  <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
+               </VBox.margin>
+            </Button>
+            <Label fx:id="labelName" text="Name - ">
                <VBox.margin>
                   <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
                </VBox.margin>
             </Label>
-            <Label fx:id="labelPrice">
+            <Label fx:id="labelPrice" text="Price - ">
                <VBox.margin>
                   <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
                </VBox.margin>
             </Label>
-            <Label fx:id="labelAmount">
+            <Label fx:id="labelAmount" text="Amount - ">
                <VBox.margin>
                   <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
                </VBox.margin>
             </Label>
-            <Label fx:id="labelGroup">
+            <Label fx:id="labelGroup" text="Group -">
                <VBox.margin>
                   <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
                </VBox.margin>
             </Label>
-            <Label fx:id="labelManufacturer">
+            <Label fx:id="labelManufacturer" text="Manufacturer -">
                <VBox.margin>
                   <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
                </VBox.margin>
             </Label>
-            <Label fx:id="labelDescription">
+            <Label fx:id="labelDescription" text="Description:">
                <VBox.margin>
                   <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
                </VBox.margin>
@@ -51,6 +63,31 @@
          </children></VBox>
    </left>
    <top>
-      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+      <VBox BorderPane.alignment="CENTER">
+         <children>
+            <HBox>
+               <children>
+                  <Button fx:id="buttonAdd" mnemonicParsing="false" text="Add new">
+                     <HBox.margin>
+                        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                     </HBox.margin>
+                  </Button>
+                  <TextField fx:id="search" onAction="#onSearch" HBox.hgrow="ALWAYS">
+                     <HBox.margin>
+                        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                     </HBox.margin>
+                  </TextField>
+                  <Button fx:id="buttonSearch" mnemonicParsing="false" onAction="#onSearch" text="Search">
+                     <HBox.margin>
+                        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+               <padding>
+                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+               </padding>
+            </HBox>
+         </children>
+      </VBox>
    </top>
 </BorderPane>
