--- a/src/main/resources/ua/fastgroup/clientserversstorage/products-view.fxml
+++ b/src/main/resources/ua/fastgroup/clientserversstorage/products-view.fxml
@@ -30,6 +30,11 @@
                   <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
                </VBox.margin>
             </Button>
+            <Button fx:id="buttonTotalPrice" mnemonicParsing="false" onAction="#onTotalPrice" text="Total price">
+               <VBox.margin>
+                  <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
+               </VBox.margin>
+            </Button>
             <Label fx:id="labelName" text="Name - ">
                <VBox.margin>
                   <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
